# esp-drone-wdss

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  PROJECT_COMPARISON_ANALYSIS.md  PROJECT_STATUS_REPORT.md  UPDATED_SYSTEM_DOCUMENTATION.md
.claude/: settings.local.json
components/core/crazyflie/: CMakeLists.txt  power_distribution.c  stabilizer_types.h
components/core/crazyflie/modules/src/: system.c
components/core/crazyflie/utils/src/: cfassert.c
components/drivers/general/led/: CMakeLists.txt
components/drivers/general/motors/: CMakeLists.txt  motors.c
components/gcs_comm/: CMakeLists.txt  gcs_comm.c
components/gcs_comm/include/: gcs_comm.h
main/: CMakeLists.txt  config.example.h  main.c
